# some-asm

./: .gitignore  LICENSE  PLAN.md  README.md  flake.nix  pyproject.toml
examples/: main_tester.py
examples/asm/x86-16-nasm/01-data/: 00-sizes.asm  04-stack.asm
examples/asm/x86-16-nasm/03-cli/: 06-parse-args-array.asm
examples/asm/x86-16-nasm/comp/: 0x-base-change.asm
examples/x86-16-nasm/00-core/: 04-echo-string.asm
examples/x86-16-nasm/01-data/: 01-addr-value.asm  02-pointers-indirect.asm
examples/x86-16-nasm/02-alu/: 03-multiplication.asm
examples/x86-16-nasm/03-cli/: 01-parse-u16.asm
examples/x86-16-nasm/comp/: conversor-masm.asm  conversor-nasm.asm  conversor.rs
resources/: attributions.md
resources/asm/: compare_str.asm  compare_str.md  hello_loop.asm  hello_world.asm  multiple_hello.asm  multiple_ops.asm  sum_int.asm
resources/colors/: _colors.scss
resources/img/static/: attributions.md
resources/themes/: catppuccin-mocha.scss  dev.scss
resources/x86/: change_base.asm  change_base.com  hello.asm
resources/x86/scripts/: hw.asm  test.asm
src/: dis-asm.py  entrypoint.py  main.py  some_asm.py  x86-16-nasm.py
src/components/: app.py  code_editor.py  display.py  loading_screen.py  menu_bar.py  side_panel.py  vistualizer.py  workspace.py
src/config/: globals.py
src/core/: lexer.py
src/lib/: io.inc  macros.inc
src/std/: 00-stack_lifo.asm  01-deg2rad.asm
src/ui/: main_window.py
tests/: test_lexer.py
x86/: asm.md  commit_msg.tmp  flake.nix  run-asm.sh  src.md  todo.md
x86/asm/: 0x-00-hello.asm  0x-00-skeleton.asm  0x-01-echo-char.asm  0x-01-hello.asm  0x-02-wait-for-enter.asm  1x-01-addition.asm  1x-04-module.asm  1x-05-division.asm  2x-00-read-param.asm  2x-01-parse-u16.asm  2x-02-parse-str.asm  2x-03-parse-i16.asm  2x-04-parse-hex.asm  2x-05-parse-bool.asm  2x-06-parse-args.asm  3x-00-import.asm  3x-01-hello-macros.asm  ex-01.asm  lib.inc
x86/asm/fn/: print-external-message.inc
x86/scripts/: exit.asm  exit.com  hello.com
x86/src/01-data/: 03-iter.asm
x86/src/03-cli/: 02-parse-string.asm  03-parse-i16.asm  05-parse-bool.asm
x86/src/04-mod/: 01-hello-macros.asm
x86/src/junk/: ex-01.asm
(+6 files in other folders)
